@@ -6,11 +6,34 @@ package Paws::Net::RestJsonResponse {
   sub unserialize_response {
     my ($self, $data) = @_;
     my $json = from_json( $data );
-    if ( defined $json->{Errors} ) {
-      croak "Error: $data";
+    return $json;
+  }
+
+  sub error_to_exception {
+    my ($self, $struct, $call_object, $http_status, $content, $headers) = @_;
+
+    my ($message, $request_id, $code);
+
+    if (exists $struct->{message}){
+      $message = $struct->{message};
+    } elsif (exists $struct->{Message}){
+      $message = $struct->{Message};
+    } else {
+      die "Unrecognized error message format";
     }
 
-    return $json;
+    if (exists $headers->{'x-amzn-errortype'}){
+      $code = (split /:/, $headers->{'x-amzn-errortype'})[0];
+    } else {
+      $code = (exists $struct->{Code}) ? $struct->{Code} : $struct->{ code };
+    }
+    $request_id = $headers->{ 'x-amzn-requestid' };
+
+    Paws::Exception->new(
+      message => $message,
+      code => $code,
+      request_id => $request_id
+    );
   }
 }
 
