@@ -1,0 +1,1 @@
+{"headers":{"x-amzn-requestid":"000000000000000000000000000000000000","content-type":"text/xml","date":"Fri, 05 Jun 2015 23:14:39 GMT","content-length":"313"},"status":"403","content":"<ErrorResponse xmlns=\"http://cloudsearch.amazonaws.com/doc/2013-01-01/\">\n  <Error>\n    <Type>Sender</Type>\n    <Code>InvalidClientTokenId</Code>\n    <Message>The security token included in the request is invalid.</Message>\n  </Error>\n  <RequestId>000000000000000000000000000000000000</RequestId>\n</ErrorResponse>\n"}
