@@ -1,0 +1,1 @@
+{"headers":{"x-amzn-requestid":"000000000000000000000000000000000000","content-type":"application/x-amz-json-1.0","x-amz-crc32":"3880715766","date":"Fri, 05 Jun 2015 23:14:34 GMT","content-length":"132"},"status":"400","content":"{\"__type\":\"com.amazon.coral.service#UnrecognizedClientException\",\"message\":\"The security token included in the request is invalid.\"}"}
