@@ -1,0 +1,1 @@
+{"headers":{"x-amzn-requestid":"000000000000000000000000000000000000","connection":"close","date":"Fri, 05 Jun 2015 23:14:38 GMT","content-length":"109"},"status":"400","content":"{\"code\":\"MissingParameterValueException\",\"message\":\"Required parameter missing: API version\",\"type\":\"Client\"}"}
