@@ -1,0 +1,1 @@
+{"headers":{"x-amzn-requestid":"000000000000000000000000000000000000","content-type":"text/xml","date":"Fri, 05 Jun 2015 23:14:32 GMT","content-length":"306"},"status":"403","content":"<ErrorResponse xmlns=\"https://iam.amazonaws.com/doc/2010-05-08/\">\n  <Error>\n    <Type>Sender</Type>\n    <Code>InvalidClientTokenId</Code>\n    <Message>The security token included in the request is invalid.</Message>\n  </Error>\n  <RequestId>000000000000000000000000000000000000</RequestId>\n</ErrorResponse>\n"}
