@@ -1,0 +1,1 @@
+{"headers":{"x-amzn-requestid":"000000000000000000000000000000000000","x-amzn-errortype":"InvalidSignatureException:http://internal.amazon.com/coral/com.amazon.coral.service/","connection":"Close","content-type":"application/json","date":"Fri, 05 Jun 2015 23:14:37 GMT","content-length":"114"},"status":"403","content":"{\"message\":\"Signature expired: 20150605T230053Z is now earlier than 20150605T230937Z (20150605T231437Z - 5 min.)\"}"}
