@@ -1,0 +1,1 @@
+{"headers":{"connection":"close","content-type":"application/xml","x-amz-request-id":"000000000000000000000000000000000000","date":"Fri, 05 Jun 2015 23:14:34 GMT","transfer-encoding":"chunked","x-amz-id-2":"48TUBwR4KaaQB4AHjJMJ7JajNFf+XXG0xykzNJiF09IAbO7Rg8WIQxBn8lG/6IiwpHEDeqQ5Vxk=","server":"AmazonS3"},"status":"400","content":"<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<Error><Code>UnsignedContentSHA256NotAllowed</Code><Message>The provided 'x-amz-content-sha256' header must be a valid SHA256.</Message><RequestId>000000000000000000000000000000000000</RequestId><HostId>48TUBwR4KaaQB4AHjJMJ7JajNFf+XXG0xykzNJiF09IAbO7Rg8WIQxBn8lG/6IiwpHEDeqQ5Vxk=</HostId></Error>"}
