@@ -1,0 +1,1 @@
+{"headers":{"x-amzn-requestid":"000000000000000000000000000000000000","connection":"close","content-type":"text/xml","date":"Fri, 05 Jun 2015 23:14:32 GMT","content-length":"311","server":"Server"},"status":"403","content":"<?xml version=\"1.0\"?><ErrorResponse xmlns=\"http://queue.amazonaws.com/doc/2012-11-05/\"><Error><Type>Sender</Type><Code>InvalidClientTokenId</Code><Message>The security token included in the request is invalid.</Message><Detail/></Error><RequestId>000000000000000000000000000000000000</RequestId></ErrorResponse>"}
